[package]
name = "notion-backup"
version = "0.1.0"
edition = "2021"
authors = ["Erik McClure <erikm@fundament.software>"]
description = """
Automatically backs up all notion pages and database schemas it has access to.
"""
categories = ["integration", "backup"]
homepage = "https://github.com/fundament-software/notion-backup"
readme = "README.md"
repository = "https://github.com/fundament-software/notion-backup"
license = "Apache-2.0"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.anyhow]
version = "1.0.70"
features = ["backtrace"]

[dependencies]
serde_json = "1.0"
config = { version = "0.13.3", features = ["toml"] }
notion = { path = "../notion" }
serde = "1.0.160"
toml = "0.7.3"
uuid = { version = "1.3.1", features = ["macro-diagnostics"] }
once_cell = "1.17.1"
convert_case = "0.6.0"
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
