[package]
name = "notion-backup"
version = "0.1.0"
edition = "2024"
authors = ["Erik McClure <erikm@fundament.software>"]
description = """
Automatically backs up all notion pages and database schemas it has access to.
"""
categories = ["integration", "backup"]
homepage = "https://github.com/fundament-software/notion-backup"
readme = "README.md"
repository = "https://github.com/fundament-software/notion-backup"
license = "Apache-2.0"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.anyhow]
version = "1.0.70"
features = ["backtrace"]

[dependencies]
serde_json = "1.0"
config = { version = "0.15", features = ["toml"] }
notion = { git = "https://github.com/fundament-software/notion" }
serde = "1.0.160"
toml = "0.8.20"
uuid = { version = "1.3.1", features = ["macro-diagnostics"] }
once_cell = "1.17.1"
convert_case = "0.8.0"
tracing-subscriber = "0.3.17"
tracing = "0.1.37"

[dev-dependencies]
cargo-husky = "1"
